--- a/SmartSchool.WebAPI/appsettings.Development.json
+++ b/SmartSchool.WebAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=SmartSchool.db"
+    "Default": "Data Source=SmartSchool.db",
+    "MySqlConnection": "Server=localhost;Port=3307;Database=SmartSchoolDb;User=root;Password=lalaland"
   },
   "Logging": {
     "LogLevel": {
